feat: index.htmlをdist配下に置かずに、webpack-dev-serverがhot reloadできるように設定

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <div id="app"></div>
-<script src="main.js"></script>
+ルート直下
+<script src="./dist/main.js"></script>
 </body>
 </html>
